# omiros

./: Cargo.toml  README.md  justfile
.cargo/: config.toml
.github/workflows/: ci.yml
src/: brew.rs  defaults.rs  dotfiles.rs  errors.rs  lib.rs  macos.rs  main.rs  mas.rs  rustup.rs  system.rs  system_utils.rs  vscode.rs
src/grammars/: mas_list.pest
src/shell_installers/: mod.rs  rustup.rs
